compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__pattern_matching_on_multiple_literal_tuples.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n        let wibble = 1\n        case #(1, 2), #(wibble, wibble) {\n            _, _ -> Nil\n        }\n      }"
---
warning: Case expression with literal tuple as subject
  ┌─ /src/warning/wrn.gleam:3:14
  │
3 │         case #(1, 2), #(wibble, wibble) {
  │              ^^^^^^^ You can remove this tuple wrapper

Case expressions can take multiple subjects directly.
Hint: You can pass the contents of the tuple directly, separated by commas.

warning: Case expression with literal tuple as subject
  ┌─ /src/warning/wrn.gleam:3:23
  │
3 │         case #(1, 2), #(wibble, wibble) {
  │                       ^^^^^^^^^^^^^^^^^ You can remove this tuple wrapper

Case expressions can take multiple subjects directly.
Hint: You can pass the contents of the tuple directly, separated by commas.
