compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__redundant_let_assert.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  let assert wibble = [1, 2, 3]\n  wibble\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let assert wibble = [1, 2, 3]
  wibble
}


----- WARNING
warning: Redundant assertion
  ┌─ /src/warning/wrn.gleam:3:7
  │
3 │   let assert wibble = [1, 2, 3]
  │       ^^^^^^ You can remove this

This assertion is redundant since the pattern covers all possibilities.
