compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__result_discard_warning_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn foo() { Ok(5) }\npub fn main() {\n  foo()\n  5\n}"
---
warning: Unused result value
  ┌─ /src/warning/wrn.gleam:4:3
  │
4 │   foo()
  │   ^^^^^ The Result value created here is unused

Hint: If you are sure you don't need it you can assign it to `_`.
